// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DynamicForm snapshot/smoke tests > renders car schema without crashing 1`] = `
<div>
  <form>
    <div
      class="mb-4"
    >
      <input
        id="client"
        name="client"
        type="hidden"
        value=""
      />
    </div>
    <div
      class="mb-4"
    >
      <input
        id="project"
        name="project"
        type="hidden"
        value=""
      />
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="clientReference"
        >
          Client Reference
        </label>
        <input
          class="border rounded px-2 py-1 w-full"
          id="clientReference"
          name="clientReference"
          type="text"
        />
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="border border-gray-300 p-2 rounded mb-2"
      >
        <div>
          Traveler Selector [stub]
        </div>
        <div>
          Selected: 
          None
        </div>
        <button
          type="button"
        >
          + Add Traveler (stub)
        </button>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="pickupType"
        >
          Pickup Location Type
          <span
            class="text-red-500"
          >
             *
          </span>
        </label>
        <select
          class="border rounded px-2 py-1 w-full"
          id="pickupType"
          name="pickupType"
        >
          <option
            value=""
          >
            Select...
          </option>
          <option
            value="Airport"
          >
            Airport
          </option>
          <option
            value="Specific"
          >
            Specific
          </option>
          <option
            value="General"
          >
            General
          </option>
        </select>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4 text-gray-500"
      >
        <label>
          Pickup Location
        </label>
        <div>
          [DynamicMapAirport input not yet implemented]
        </div>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <input
        id="pickup.location.lat"
        name="pickup.location.lat"
        type="hidden"
        value=""
      />
    </div>
    <div
      class="mb-4"
    >
      <input
        id="pickup.location.lng"
        name="pickup.location.lng"
        type="hidden"
        value=""
      />
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="rentalStart"
        >
          Pickup Date
          <span
            class="text-red-500"
          >
             *
          </span>
        </label>
        <input
          class="border rounded px-2 py-1 w-full"
          id="rentalStart"
          name="rentalStart"
          type="date"
        />
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4 text-gray-500"
      >
        <label>
          Pickup Time
        </label>
        <div>
          [Time input not yet implemented]
        </div>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="sameDropoff"
        >
          <input
            id="sameDropoff"
            name="sameDropoff"
            type="checkbox"
          />
           
          Drop-Off = Pickup?
        </label>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="dropoffType"
        >
          Drop-Off Location Type
        </label>
        <select
          class="border rounded px-2 py-1 w-full"
          id="dropoffType"
          name="dropoffType"
        >
          <option
            value=""
          >
            Select...
          </option>
          <option
            value="Airport"
          >
            Airport
          </option>
          <option
            value="Specific"
          >
            Specific
          </option>
          <option
            value="General"
          >
            General
          </option>
        </select>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4 text-gray-500"
      >
        <label>
          Drop-Off Location
        </label>
        <div>
          [DynamicMapAirport input not yet implemented]
        </div>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <input
        id="dropoff.location.lat"
        name="dropoff.location.lat"
        type="hidden"
      />
    </div>
    <div
      class="mb-4"
    >
      <input
        id="dropoff.location.lng"
        name="dropoff.location.lng"
        type="hidden"
      />
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="rentalEnd"
        >
          Drop-Off Date
          <span
            class="text-red-500"
          >
             *
          </span>
        </label>
        <input
          class="border rounded px-2 py-1 w-full"
          id="rentalEnd"
          name="rentalEnd"
          type="date"
        />
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4 text-gray-500"
      >
        <label>
          Vehicles
        </label>
        <div>
          [Array input not yet implemented]
        </div>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="notes"
        >
          Notes
        </label>
        <textarea
          class="border rounded px-2 py-1 w-full"
          id="notes"
          name="notes"
        />
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="budgetGuidance"
        >
          Budget Guidance
        </label>
        <select
          class="border rounded px-2 py-1 w-full"
          id="budgetGuidance"
          name="budgetGuidance"
        >
          <option
            value=""
          >
            Select...
          </option>
          <option
            value="Economy"
          >
            Economy
          </option>
          <option
            value="Mid-size"
          >
            Mid-size
          </option>
          <option
            value="SUV"
          >
            SUV
          </option>
          <option
            value="Truck"
          >
            Truck
          </option>
          <option
            value="Premium"
          >
            Premium
          </option>
        </select>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`DynamicForm snapshot/smoke tests > renders flight schema without crashing 1`] = `
<div>
  <form>
    <div
      class="mb-4"
    >
      <input
        id="client"
        name="client"
        type="hidden"
      />
    </div>
    <div
      class="mb-4"
    >
      <input
        id="project"
        name="project"
        type="hidden"
      />
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="clientReference"
        >
          Client Reference
        </label>
        <input
          class="border rounded px-2 py-1 w-full"
          id="clientReference"
          name="clientReference"
          type="text"
        />
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="border border-gray-300 p-2 rounded mb-2"
      >
        <div>
          Traveler Selector [stub]
        </div>
        <div>
          Selected: 
          None
        </div>
        <button
          type="button"
        >
          + Add Traveler (stub)
        </button>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="text-red-500"
      >
        Unsupported field type: 
        airportPicker
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="text-red-500"
      >
        Unsupported field type: 
        airportPicker
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="tripType"
        >
          Trip Type
          <span
            class="text-red-500"
          >
             *
          </span>
        </label>
        <select
          class="border rounded px-2 py-1 w-full"
          id="tripType"
          name="tripType"
        >
          <option
            value=""
          >
            Select...
          </option>
          <option
            value="oneWay"
          >
            One-Way
          </option>
          <option
            value="roundTrip"
          >
            Round-Trip
          </option>
        </select>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="flightDate"
        >
          Departure Date
          <span
            class="text-red-500"
          >
             *
          </span>
        </label>
        <input
          class="border rounded px-2 py-1 w-full"
          id="flightDate"
          name="flightDate"
          type="date"
        />
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="flightTimePrefDepart"
        >
          Time Preference – Departure
        </label>
        <select
          class="border rounded px-2 py-1 w-full"
          id="flightTimePrefDepart"
          name="flightTimePrefDepart"
        >
          <option
            value=""
          >
            Select...
          </option>
          <option
            value="Optimize"
          >
            Optimize
          </option>
          <option
            value="Morning"
          >
            Morning
          </option>
          <option
            value="Afternoon"
          >
            Afternoon
          </option>
          <option
            value="Evening"
          >
            Evening
          </option>
          <option
            value="Specific"
          >
            Specific
          </option>
          <option
            value="Custom"
          >
            Custom
          </option>
        </select>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="notes"
        >
          Notes
        </label>
        <textarea
          class="border rounded px-2 py-1 w-full"
          id="notes"
          name="notes"
        />
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="budgetGuidance"
        >
          Budget Guidance
        </label>
        <select
          class="border rounded px-2 py-1 w-full"
          id="budgetGuidance"
          name="budgetGuidance"
        >
          <option
            value=""
          >
            Select...
          </option>
          <option
            value="Lowest Logical Fare"
          >
            Lowest Logical Fare
          </option>
          <option
            value="Flexible"
          >
            Flexible
          </option>
          <option
            value="Premium"
          >
            Premium
          </option>
        </select>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`DynamicForm snapshot/smoke tests > renders hotel schema without crashing 1`] = `
<div>
  <form>
    <div
      class="mb-4"
    >
      <input
        id="client"
        name="client"
        type="hidden"
      />
    </div>
    <div
      class="mb-4"
    >
      <input
        id="project"
        name="project"
        type="hidden"
      />
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="clientReference"
        >
          Client Reference
        </label>
        <input
          class="border rounded px-2 py-1 w-full"
          id="clientReference"
          name="clientReference"
          type="text"
        />
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="border border-gray-300 p-2 rounded mb-2"
      >
        <div>
          Traveler Selector [stub]
        </div>
        <div>
          Selected: 
          None
        </div>
        <button
          type="button"
        >
          + Add Traveler (stub)
        </button>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <div>
          Target Location Type
          <span
            class="text-red-500"
          >
             *
          </span>
        </div>
        <label
          class="mr-3"
        >
          <input
            name="targetLocationType"
            type="radio"
            value="specific"
          />
           
          Specific Property
        </label>
        <label
          class="mr-3"
        >
          <input
            name="targetLocationType"
            type="radio"
            value="general"
          />
           
          General Area
        </label>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4 text-gray-500"
      >
        <label>
          Location
        </label>
        <div>
          [MapAutocomplete input not yet implemented]
        </div>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <input
        id="location.lat"
        name="location.lat"
        type="hidden"
      />
    </div>
    <div
      class="mb-4"
    >
      <input
        id="location.lng"
        name="location.lng"
        type="hidden"
      />
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="checkInDate"
        >
          Check-In Date
          <span
            class="text-red-500"
          >
             *
          </span>
        </label>
        <input
          class="border rounded px-2 py-1 w-full"
          id="checkInDate"
          name="checkInDate"
          type="date"
        />
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="checkOutDate"
        >
          Check-Out Date
          <span
            class="text-red-500"
          >
             *
          </span>
        </label>
        <input
          class="border rounded px-2 py-1 w-full"
          id="checkOutDate"
          name="checkOutDate"
          type="date"
        />
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4 text-gray-500"
      >
        <label>
          Rooms
        </label>
        <div>
          [Array input not yet implemented]
        </div>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="notes"
        >
          Notes
        </label>
        <textarea
          class="border rounded px-2 py-1 w-full"
          id="notes"
          name="notes"
        />
      </div>
    </div>
    <div
      class="mb-4"
    >
      <div
        class="mb-4"
      >
        <label
          for="budgetGuidance"
        >
          Budget Guidance
        </label>
        <select
          class="border rounded px-2 py-1 w-full"
          id="budgetGuidance"
          name="budgetGuidance"
        >
          <option
            value=""
          >
            Select...
          </option>
          <option
            value="Optimize"
          >
            Optimize
          </option>
          <option
            value="Mid-range"
          >
            Mid-range
          </option>
          <option
            value="Premium"
          >
            Premium
          </option>
        </select>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
